# local-backlog

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
docs/: pre-commit.md
docs/adr/: README.md
docs/adr/en/: 0000-rust-como-linguagem-de-aprendizado.md  0001-tenancy-estrita-por-projeto.md  0002-tasks-atomica-com-satelites.md  0003-migrations-inline.md  0004-output-contract.md  0005-registry-global.md  README.md  TEMPLATE.md
docs/adr/es-AR/: 0000-rust-como-linguagem-de-aprendizado.md  0001-tenancy-estrita-por-projeto.md  0002-tasks-atomica-com-satelites.md  0003-migrations-inline.md  0004-output-contract.md  0005-registry-global.md  README.md  TEMPLATE.md
docs/adr/pt-BR/: 0000-rust-como-linguagem-de-aprendizado.md  0001-tenancy-estrita-por-projeto.md  0002-tasks-atomica-com-satelites.md  0003-migrations-inline.md  (+4 more)
migrations/: 0001_initial.sql
src/: bootstrap.rs  cli_root.rs  config.rs  error.rs  format.rs  lib.rs  main.rs  output.rs  registry.rs  resolver.rs
src/cli/: add.rs  archive.rs  attr.rs  completions.rs  doctor.rs  done.rs  edit.rs  events.rs  export.rs  init.rs  link.rs  list.rs  mod.rs  projects.rs  show.rs  tag.rs
src/db/: events.rs  migrations.rs  mod.rs
src/domain/: mod.rs
tests/: bootstrap.rs  cli_add.rs  cli_archive.rs  cli_completions.rs  cli_doctor.rs  cli_done.rs  cli_edit.rs  cli_export.rs  cli_init.rs  cli_list.rs  cli_projects.rs  cli_satellites.rs  cli_show.rs  events.rs  repo.rs  resolver.rs  schema_snapshot.rs  tenancy_triggers.rs
tests/snapshots/: schema_snapshot__schema.snap
(+6 files in other folders)
