[package]
name = "local-backlog"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "CLI para gerenciar backlog pessoal em SQLite local, isolado por projeto."
license = "MIT"
repository = "https://github.com/OliveiraCleidson/local-backlog"

[[bin]]
name = "backlog"
path = "src/main.rs"

[lib]
name = "local_backlog"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = "2.2"
clap_complete = "4.5"
rusqlite = { version = "0.31", features = ["bundled"] }
rusqlite_migration = "1.2"
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
miette = { version = "7", features = ["fancy"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
owo-colors = "4"
is-terminal = "0.4"
inquire = "0.7"
dirs = "5"

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["yaml"] }
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
